documenting all api endpoints
